# ucrp

./: .gitignore  CMakeLists.txt  ucrp.sql
include/: callbacks.cpp  streamer.cpp  streamer.hpp
server/: crashinfo.txt  server.cfg  server_log.txt  ucrp.db  ucrp.dbshow
server/plugins/: ucrp.exp  ucrp.lib
src/: main.cpp  main.def
src/commands/: index.h
src/commands/admin/: Moderator.h
src/commands/users/: Chat.h  Inventory.h  index.h
src/dialogs/: InventoryDialog.h  PlayerDialog.h
src/game/: Dialog.cpp  Dialog.h  Items.h  Message.cpp  Message.h  Player.cpp  Player.h
src/managers/: ChatManager.cpp  ChatManager.h  CommandManager.cpp  CommandManager.h  FloorManager.cpp  FloorManager.h  PlayerManager.cpp  PlayerManager.h
src/maps/: Alhambra.h  Cemetery.h  SkatePark.h
src/structures/: Inventory.h
src/utils/: Constants.h  Flags.h  Objects.h  Player.h  Point.h  Util.h
src/utils/dialogs/: PlayerConnect.h
